README: qt5-default is not needed for Debian 11
See https://linuxmusicians.com/viewtopic.php?f=61&t=24242&p=142196#p142196
and https://linuxmusicians.com/viewtopic.php?f=61&t=23558

--- a/src/README
+++ b/src/README
@@ -166,13 +166,14 @@ details.
            git clone https://github.com/muse-sequencer/muse.git
 
     3. Install libraries:
-
+       Note! When building under Debian 11 (and distros based upon Debian 11)
+       remove qt5-default from the list.
+       
        sudo apt-get install\
          libsndfile1-dev\
          libsamplerate0-dev\
          libjack-jackd2-dev\
          ladspa-sdk\
-         qt5-default\
          qttools5-dev\
          qttools5-dev-tools\
          liblo-dev\
@@ -190,7 +191,8 @@ details.
 	 libsratom-dev\ 
          librubberband-dev\
          python3-dev\
-         python3-pyqt5
+         python3-pyqt5\
+         qt5-default
 
     4. Change directory:
 
