--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,5 @@
+04.05.2022
+    - Reverse script that reverses MIDI and DRUM parts incl controllers. (Staffan)
 03.05.2022
     - Reuploaded script (Fix issue 1037: Time stretching/shrinking for midi/drum parts.) (Staffan)
 26.04.2022
