Add changes description about edit behavior

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -4,6 +4,9 @@
 10.11.2022
     - Fix issue 1088: Cannot copy/paste parts. Fix previous 9/24/22 fix. (Tim)
       Was slight problem in parseArrangerPasteXml().
+27.10.2022
+    * Fix open editor in tab or new window behavior
+    * Move List Editor from dock to window  
 23.10.2022
     * Changed project create default to make a sub directory (rj)
 10.07.2022
