--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+29.04.2023:
+    - Fixed: Synths/plugins: Crashes in getData()/apply(). Caused by 14.04 changes. (Tim)
+      Oops. Reinstate check for zero slice size in LV2 VST DSSI ::getData(), and PluginI::apply().
+    - Fixed: VST: Crashes revealed by Pianoteq 8. (Tim)
+      Remove idling code in audioMasterUpdateDisplay and move it to audioMasterIdle, in the callback.
+      In VstNativeEditor, add a close() function and call it from destructor. Remove code from closeEvent().
 28.04.2023:
     - Revert: Pull 1099: "Move event list editor from dock to window." (Tim)
       This was kinda not good. The list editor really belongs in a dock beside the pr/drum editor
