--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,6 @@
+15.05.2023:
+    - Fixed: Crashes with certain plugins that use libinstpatch (Fluida lv2 etc). (Tim)
+      It was recommended to call ipatch_init() in the main app. This was added.
 13.05.2023:
     - Rewrite of 08.05.2023: Use alternate method for top level closing (wait for destroyed signals). (Tim)
       Qt bug reports response told me not to do it the other way.
