--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+11.06.2023
+    - Fixed issue 1120 "Cannot clone parts". (Tim)
+      Several pieces of code were fixed, including one 10-year-old mistake.
+      Tested OK copy/paste/clone with several different tracks types.
 29.05.2023
     - Fixed: Still more crashes / bad behaviour on song (re)load. Further to 25.05.2023. (Tim)
       Fix at 13.05.2023 (wait for top level widgets to be deleted before continuing with load) was good
