--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
+31.07.2023
+    - Fixed midi remote control: Don't accept note-offs. (Tim)
+      Symptoms were: Double step-record entries, transport record toggling, double play etc.
 26.07.2023
-    - Fixed broken midi to logarithimic audio controller assignment, such as volume. (Tim)
+    - Fixed broken midi to logarithmic audio controller assignment, such as volume. (Tim)
 06.07.2023
     - Hexfloat values: Rework code with help from donarturo11. (Tim)
       Avoid per-thread thread-safe locale calls (uselocale etc). Not available on mingw for ex.
