Add follow-up typos

--- a/src/doc/developer_docs.tex
+++ b/src/doc/developer_docs.tex
@@ -20,7 +20,7 @@
 %% state in the commit log that you "only" rearranged things.
 %%
 %% please adhere to the "User's manual" / "Internals" / "Design"
-%% partitioning (genereally, don't change the chapters until there
+%% partitioning (generally, don't change the chapters until there
 %% is a really good reason for doing so (adding a chapter like
 %% "feature requests" as flo did in r1497 IS one).
 %% Below that, feel free to change the logical arrangement
