--- a/src/doc/documentation.tex
+++ b/src/doc/documentation.tex
@@ -20,7 +20,7 @@
 %% state in the commit log that you "only" rearranged things.
 %%
 %% please adhere to the "User's manual" / "Internals" / "Design"
-%% partitioning (genereally, don't change the chapters until there
+%% partitioning (generally, don't change the chapters until there
 %% is a really good reason for doing so (adding a chapter like
 %% "feature requests" as flo did in r1497 IS one).
 %% Below that, feel free to change the logical arrangement
@@ -223,7 +223,7 @@ most convenient way is to install a prepackaged version from your chosen
 distribution. The drawback of this is that it may not be the most recent
 version, though often there is a more recent package from a private packager.
 \subsubsection{Installation from source}
-Building MusE from source is not hard, there are a number of prerequistes
+Building MusE from source is not hard, there are a number of prerequisites
 that must be met but the actual building should be painless (ha, famous
 last words).\\
 Please follow the README in the source package and/or read the instructions
