--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,5 @@
+03.09.2023
+    - Fluidsynth MESS: Fixed deprecated function calls at version >= 2.2 (Tim)
 31.08.2023
     - Fixed issue 1106: Running scripts in midi editors takes waaay too long. (Tim)
       In Scripts::executeScript(): Changed from applyOperation for each event
