some updates for MusE 4.2

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,5 @@
+10.09.2023
+    *** MusE 4.2 ***
 03.09.2023
     - Fluidsynth MESS: Fixed deprecated function calls at version >= 2.2 (Tim)
 31.08.2023
