--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,5 @@
+24.09.2023
+    *** MusE 4.2.1 ***
 23.09.2023
     - Fix issue 1247: compilation only succeeds with MODULES_BUILD_STATIC=1 (Tim)
       Five undefined symbols. Remove 'inline' from five functions in mididev.cpp
