--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,6 @@
+25.09.2023
+    - LV2: Streamline discovery. Eliminate duplicate load_world and load_all_plugins. (Tim)
+      This might make only slightly faster startup time. But code is more proper now.
 24.09.2023
     *** MusE 4.2.1 ***
 23.09.2023
